fix: prevent legend overflow with long series names (#162)

--- a/src/internal/components/chart-legend/styles.scss
+++ b/src/internal/components/chart-legend/styles.scss
@@ -15,6 +15,7 @@
   flex: 1;
   min-height: 0;
   display: flex;
+  min-inline-size: 0;
   flex-direction: column;
 
   inline-size: 100%;
